# ContextForge

./: .gitignore  CLAUDE.md  HIGHLIGHTS.md  PROGRESS.md  README.md  TODO.md  agent.py  context.py  harness.py  main.py  pyproject.toml  pytest.ini  requirements.txt  tools.py
.claude/skills/work-process/: SKILL.md
classic_cases/2026/07/09/指令驱动压缩-百家姓/: README.md
classic_cases/2026/07/09/指令驱动压缩-百家姓/task_01/: turn_01.json
classic_cases/2026/07/09/指令驱动压缩-百家姓/task_02/: turn_01.json
docs/: 01-kv-cache-每轮全量历史为何不贵.md  02-上下文压缩不是截断API而是本地重写历史.md  03-compact该客制化而非通用.md  04-compact指令本身也要过模型安全判断.md  05-harness-用代码强制而非靠模型自律.md  06-死循环检测-reset反而放过真循环.md  07-sub-agent-本质是一个工具.md  08-循环import是东西放错了层的信号.md  09-人审与测试互补.md  README.md
evals/work-process/: evals.json
evals/work-process/iteration-1/: benchmark.json  benchmark.md  review.html
evals/work-process/iteration-1/eval-0/with_skill/run-1/: eval_metadata.json  grading.json
evals/work-process/iteration-1/eval-0/without_skill/run-1/: grading.json
evals/work-process/iteration-1/eval-1/with_skill/run-1/: grading.json
evals/work-process/iteration-1/eval-1/without_skill/run-1/: grading.json  (+1 more)
price/: price_comparison.html  price_comparison.md
src/contextforge/: __init__.py  agent.py  cli.py  collaboration.py  context.py  harness.py  tools.py
src/myagent/: __init__.py  agent.py  cli.py  context.py  harness.py
tests/: 00_smoke_test.py  01_run_agent.py  02_compaction_demo.py  test_agent_logic.py  test_audit_fixes_e2e.py  test_collaboration.py  test_context.py  test_e2e.py  test_harness.py  test_subagent.py  test_tools.py
(+21 files in other folders)
